umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0406_C1CC2CCC3CCC4CCC1C24_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_chemaxon
category: basic_chemaxon
basic_opensmiles:
  success: true
  summary:
    sum_formula: C13
    atom_count: 13
    bond_count: 16
